Update cd.ContosoAir.yml for Azure Pipelines

--- a/cd.ContosoAir.yml
+++ b/cd.ContosoAir.yml
@@ -5,23 +5,19 @@
 
 trigger:
 - none
-
 resources:
  pipelines:
   - pipeline: buildContosoAir # identifier for the resource used in pipeline resource variables
     source: Student1-23919098.ContosoAir # name of the pipeline that produces the artifact
+    trigger:
+      branches:
+        include:
+        - master
 
 pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: 'specific'
-    project: 'b14783e4-3462-41f0-91b9-b7cbd7612d9b'
-    definition: '2'
-    buildVersionToDownload: 'latest'
-    targetPath: '$(Pipeline.Workspace)'
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
     deploymentScope: 'Resource Group'
@@ -35,10 +31,10 @@ steps:
     csmParametersFile: '$(Pipeline.Workspace)/drop/Templates/azuredeploy.parameters.json'
     overrideParameters: '-p_environment $(web_environment) -p_site_prefix $(web_prefix) -p_site_web_name $(web_site)'
     deploymentMode: 'Incremental'
-- task: AzureRmWebAppDeployment@4
-  inputs:
-    ConnectionType: 'AzureRM'
-    azureSubscription: 'Azure Connection'
-    appType: 'webApp'
-    WebAppName: '$(web_prefix)-$(web_site)-$(web_environment)'
-    packageForLinux: '$(Pipeline.Workspace)/**/*.zip'
+    - task: AzureRmWebAppDeployment@4
+      inputs:
+        ConnectionType: 'AzureRM'
+        azureSubscription: 'Azure Connection'
+        appType: 'webApp'
+        WebAppName: '$(web_prefix)-$(web_site)-$(web_environment)'
+        packageForLinux: '$(Pipeline.Workspace)/**/*.zip'
